test/TestPhases/namecheck/valid/implicitmember3.blc
import E "../imports/enum"
import M "../imports/methods"
module

function f ()
    var color: E.Color = E.Green // implicit member access in other module
    var ms : M.S
    M.f()
    M.S.f()
    run M.a()
    run M.S.a()
end