test/TestPhases/namecheck/invalid/declShadowsImportblc2.blc
import M "../imports/importMe"

module

struct M
    var a: bool
end
